# PDAF

./: .gitignore  CITATION.cff  Depends  First_steps.md  First_steps.txt  Makefile  README  README.md  README_PDAF-OMI
.github/workflows/: docs.yml
PDAF_trunk/: README
PDAF_trunk/src/: Makefile  PDAF-D_add_increment.F90  PDAF-D_alloc_filters.F90  PDAF-D_allreduce.F90  PDAF-D_assimilate_estkf.F90  PDAF-D_assimilate_estkf_si.F90  PDAF-D_assimilate_etkf.F90  PDAF-D_assimilate_lestkf.F90  PDAF-D_assimilate_letkf.F90  PDAF-D_assimilate_lnetf.F90  PDAF-D_assimilate_lnetf_si.F90  PDAF-D_assimilate_lseik.F90  PDAF-D_assimilate_lseik_si.F90  PDAF-D_assimilate_netf_si.F90  PDAF-D_assimilate_pf.F90  PDAF-D_assimilate_pf_si.F90  PDAF-D_assimilate_seek.F90  PDAF-D_assimilate_seek_si.F90  PDAF-D_assimilate_seik_si.F90  PDAF-D_enkf_alloc.F90  PDAF-D_enkf_gather_resid.F90  PDAF-D_enkf_memtime.F90  PDAF-D_estkf_analysis.F90  PDAF-D_estkf_analysis_fixed.F90  PDAF-D_estkf_memtime.F90  PDAF-D_etkf_Tright.F90  PDAF-D_etkf_analysis.F90  PDAF-D_etkf_analysis_T.F90  PDAF-D_etkf_analysis_fixed.F90  PDAF-D_etkf_init.F90  PDAF-D_etkf_memtime.F90  PDAF-D_gather_ens.F90  PDAF-D_gather_obs_f2_flex.F90  PDAF-D_gen_obs.F90  PDAF-D_generate_obs_si.F90  PDAF-D_genobs_alloc.F90  PDAF-D_genobs_init.F90  PDAF-D_get_state.F90  PDAF-D_init.F90  PDAF-D_init_filters.F90  (+80 more)
PDAF_trunk/tutorial/: README  runtests.sh
branches/PDAF-D_V1.14/: README
branches/PDAF-D_V1.15.1_OMI1.1/modelbindings/AWI-CM1.4/echam-6.3.02p4/src/: CMakeLists.txt  mod_assim_pdaf.f90
branches/PDAF-D_V1.15.1_OMI_devel/modelbindings/AWI-CM1.4/oasis3-mct/lib/psmile/: CMakeLists.txt
branches/PDAF_V2.0_async_devel/: README
branches/egu2021/: README
branches/spp1788/: README
branches_PDAF_V2.0_lknetf_devel/src/: PDAF_assimilate_lseik.F90  PDAF_assimilate_prepost.F90  PDAF_diag_crps.F90  PDAF_diag_histogram.F90  PDAF_eofcovar.F90  PDAF_put_state_lenkf_si.F90  PDAF_smoother_lnetf.F90  PDAFomi_obs_l.F90
docs/: FORD_options.md  FORD_options_int.md  INDEX.md  Makefile  requirements.txt
interface/framework/: Makefile  add_obs_error_pdaf.F90  assimilate_pdaf.F90  collect_state_pdaf.F90  distribute_state_pdaf.F90  distribute_stateinc_pdaf.F90  mod_read_obs.F90
interface/model/: Makefile
make.arch/: Albedo_mpiifort_impi.h  HLRN4_mpifort_ompi.h  HLRN4_mpiifort_impi.h  Levante_mpiifort_impi.h  NECSXAurora_nfort_mpi.h  cmake.h  cray-xd1_pg_mpich.h  cray_cce_mpi.h  cray_cce_mvapich.h  cray_ifort.h  cray_intel_mpi.h  cray_mpiifort_impi.h  ibm_xlf_mpi.h  linux_gfortran.h  linux_gfortran_openmpi.h  linux_ifort.h  linux_ifort_mvapich2.h  linux_ifort_sgi.h  linux_mpiifort_impi.h  linux_pgi_openmpi.h  macos_gfortran.h  macos_gfortran10_openmpi.h  macos_gfortran_openmpi.h  macos_gfortran_snglprec.h  nec_sxace.h  osx_gfortran.h  osx_gfortran_openmpi.h  osx_gfortran_snglprec.h  windows_gfortran.h  windows_gfortran_openmpi.h
modelbindings/AWI-CM1.4/: README
modelbindings/MITgcm/: README  pdaf.nml
modelbindings/NEMO/: README
models/lorenz05b/: Makefile  assimilation_pdaf.F90  collect_state_pdaf.F90  compute_rms_smoother.F90  init_ens_eof.F90  init_ens_pdaf.F90  init_pdaf.F90  integration.F90  main.F90  mod_assimilation.F90  obs_gp_pdafomi.F90  prepoststep_pdaf.F90
models/lorenz05b_omi/: mod_model.F90
models/lorenz05c/: Makefile  assimilation_pdaf.F90  distribute_state_pdaf.F90  init_dim_obs_f_pdaf.F90  init_dim_obs_pdaf.F90  init_ens_eof.F90  init_ens_pdaf.F90  init_obs_pdaf.F90  init_obserr_f_pdaf.F90  init_pdaf.F90  init_pdaf_parse.F90  initialize.F90  integration.F90  main.F90  mod_assimilation.F90  mod_model.F90  obs_gp_pdafomi.F90  parser_mpi.F90  prepoststep_pdaf.F90
models/lorenz05c_omi/: get_obs_f_pdaf.F90  init_pdaf_parse.F90
models/lorenz63/: Makefile  README  assimilation_pdaf.F90  compute_rms_smoother.F90  compute_truermse.F90  init_dim_obs_pdaf.F90  init_ens_ens.F90  init_ens_eof.F90  init_ens_pdaf.F90  init_ens_rnd.F90  init_obs_mask.F90  init_obserr_f_pdaf.F90  init_pdaf.F90  initialize.F90  integration.F90  likelihood_pdaf.F90  main.F90  mod_assimilation.F90  mod_modeltime.F90  mod_parallel.F90  next_observation_pdaf.F90  obs_gp_pdafomi.F90  output_netcdf_asml.F90  prepoststep_pdaf.F90  (+1 more)
nullmpi/: nullmpi.F90
src/: Depends  Makefile  PDAF-D_3dvar_alloc.F90  PDAF-D_3dvar_analysis_cvt.F90  PDAF-D_3dvar_analysis_cvt_ens.F90  PDAF-D_3dvar_analysis_cvt_hyb.F90  PDAF-D_3dvar_analysis_ens_cvt.F90  PDAF-D_3dvar_analysis_transf.F90  PDAF-D_3dvar_costf_cg_cvt.F90  PDAF-D_3dvar_costf_cg_cvt_ens.F90  PDAF-D_3dvar_costf_cvt.F90  PDAF-D_3dvar_costf_cvt_ens.F90  PDAF-D_3dvar_costf_cvt_hyb.F90  PDAF-D_3dvar_init.F90  PDAF-D_3dvar_memtime.F90  PDAF-D_3dvar_optim_cg.F90  PDAF-D_3dvar_optim_cg_ens.F90  PDAF-D_3dvar_optim_cg_hyb.F90  PDAF-D_3dvar_optim_cgplus.F90  PDAF-D_3dvar_optim_cgplus_ens.F90  PDAF-D_3dvar_optim_lbfgs.F90  PDAF-D_3dvar_optim_lbfgs_ens.F90  PDAF-D_3dvar_optim_lbfgs_hyb.F90  PDAF-D_3dvar_update.F90  PDAF-D_add_increment.F90  PDAF-D_alloc_filters.F90  PDAF-D_allreduce.F90  PDAF-D_assimilate_3dvar.F90  PDAF-D_assimilate_en3dvar_estkf.F90  PDAF-D_assimilate_en3dvar_lestkf.F90  PDAF-D_assimilate_enkf.F90  PDAF-D_assimilate_enkf_si.F90  PDAF-D_assimilate_estkf.F90  PDAF-D_assimilate_estkf_si.F90  PDAF-D_assimilate_etkf.F90  PDAF-D_assimilate_etkf_si.F90  PDAF-D_assimilate_ewpf.F90  PDAF-D_assimilate_hyb3dvar_estkf.F90  PDAF-D_assimilate_hyb3dvar_lestkf.F90  PDAF-D_assimilate_lenkf.F90  (+774 more)
tags/PDAF_V2.0/modelbindings/AWI-CM1.4/fesom_cpl/: CMakeLists.txt  callback_obs_pdafomi.F90  finalize_pdaf.F90  output_netcdf_pdaf.F90  prepoststep_pdaf.F90
tags/PDAF_V2.1/modelbindings/AWI-CM1.4/: CMakeLists.txt
tags/PDAF_V2.1/modelbindings/AWI-CM1.4/fesom_cpl/: collect_state_pdaf.F90
tags/PDAF_V2.1/modelbindings/AWI-CM1.4/run_scripts/hlrn4/: gmd_n46_1yr_free.sl
templates/: README  README.md
test_mpi/: hello.f90
tests/: cleanall.sh  runtests.sh  runtests_offline.F90  runtests_offline.sh  runtests_online.sh  runtests_online_generate.sh  test_runtime.sh
trunk/: README
tutorial/: README  cleanall.sh  runtests.sh  runtests_omi.sh
(+11731 files in other folders)
